--- a/package.json
+++ b/package.json
@@ -9,19 +9,35 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.4",
+    "axios": "^0.25.0",
+    "blueimp-md5": "^2.19.0",
+    "cookie-parser": "^1.4.6",
     "craco-less": "^2.0.0",
+    "draft-js": "^0.11.7",
+    "draft-to-html": "^0.0.1",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
+    "http-proxy-middleware": "^2.0.3",
+    "jsonp": "^0.2.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "md5": "^2.3.0",
+    "mongoose": "^6.1.8",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
+    "qweather-icons": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
