--- a/package.json
+++ b/package.json
@@ -1,20 +1,61 @@
 {
-  "name": "admin-server_final",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "react-admin-client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "blueimp-md5": "^2.10.0",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.7",
-    "multer": "^1.4.4"
+    "@ant-design/icons": "^4.7.0",
+    "@craco/craco": "^6.4.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.18.4",
+    "axios": "^0.25.0",
+    "blueimp-md5": "^2.19.0",
+    "cookie-parser": "^1.4.6",
+    "craco-less": "^2.0.0",
+    "draft-js": "^0.11.7",
+    "draft-to-html": "^0.0.1",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
+    "http-proxy-middleware": "^2.0.3",
+    "jsonp": "^0.2.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "md5": "^2.3.0",
+    "mongoose": "^6.1.8",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
+    "qweather-icons": "^1.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "store": "^2.0.12",
+    "web-vitals": "^2.1.2"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
